[package]
name = "rust-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive", "env", "cargo"] }
anyhow = "1.0.75"
glob = "0.3.1"
serde = { version = "1.0.193", features = ["derive", "rc"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }